# palaceoftruth

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DESIGN.md  ENGINEERING_PLAN.md  INTEGRATIONS.md  NOTICE  PROJECT_STATUS.md  QUESTIONS.md  README.md  REDESIGN.md  SECURITY.md  SUPPORT.md  TODOS.md  TRADEMARKS.md  docker-compose.localhost.yml  docker-compose.yml  entities.json  mempalace.yaml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: auth.py  config.py  embedding_profile.py  main.py  mcp_scopes.py  mcp_server.py  wait_for_database.py
backend/scripts/: backfill_claim_sources.py  check_memory_rollout_smoke.py  check_redis_sentinel_rollout_gate.py  enroll_watched_sources.py  palace_eval.py  palaceoftruth_mcp.py  reembed_tenant.py  secondbrain_mcp.py  seed_watched_source_canary.py  wait_for_redis_sentinel.py  wait_for_worker_dependencies.py
backend/tests/: conftest.py  test_admin_import_api.py  test_admin_tenant_api.py  test_agent_memory_benchmark_script.py  test_agent_memory_compatibility_smoke.py  test_agent_memory_eval.py  test_agent_organization_memory_demo.py  test_agent_plugin_compatibility_checker.py  test_agent_plugin_manifests.py  test_agent_plugin_release.py  test_agent_write_contract_guidance.py  test_artifact_citations.py  test_auth.py  test_build_push_workflow.py  test_bump_chart_release.py  test_bundle_schemas.py  test_candidate_curation_scoring.py  test_candidate_curation_scoring_script.py  test_chat_api.py  test_codex_memory_import.py  test_config.py  (+92 more)
(+393 files in other folders)
