[project]
name = "palaceoftruth"
version = "0.1.0"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.4",
    "arq>=0.26",
    "redis>=5.2",
    "openai>=2.0",
    "yt-dlp>=2025.0",
    "trafilatura>=2.0",
    "pymupdf>=1.24",
    "pydantic-settings>=2.7",
    "python-multipart>=0.0.20",
    "httpx>=0.28",
    "tiktoken>=0.9",
    "boto3>=1.39",
    "feedparser>=6.0.11",
    "playwright>=1.40",
    "python-docx>=1.0",
    "openpyxl>=3.1",
    "cryptography>=44.0",
    "mcp>=1.0,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
